fix horizontal scrollbar in docs
maybe putting domain-specific rules in your shared css doesn't make sense

--- a/static/base.css
+++ b/static/base.css
@@ -17,9 +17,6 @@
 
 body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
-
     color: var(--color-text);
     line-height: 1.4;
 }
