--- a/static/index.css
+++ b/static/index.css
@@ -3,6 +3,11 @@
 
 /* Main container layout */
 
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
 main {
     width: 100%;
     height: 100%;
